# Traffic_Monitoring_Object_Tracking

./: Inference_Video_Processor.ipynb  Model_Training.ipynb  README.md  main.py  pyproject.toml  requirements.txt
